# idkServer

./: .gitignore  CMakeLists.txt  ConnectionInstance.cpp  ConnectionInstance.hpp  README.MD  Server.cpp  Server.hpp  Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp  main.cpp  utils.hpp
Pool/: Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp
Server/: Config.hpp  ConnectionInstance.cpp  ConnectionInstance.hpp  Server.cpp  Server.hpp
utils/: utils.cpp
